[project]
name = "dicom-api-mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.4",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pydicom>=3.0.1",
    "pynetdicom>=2.0.2",
    "uvicorn[standard]>=0.34.2",
]
